--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?isalxuu#1" target="_blank">首页</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/1?yujmkz" target="_blank">动态网</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/2?okvwtepw" target="_blank">大纪元</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/4?qakby" target="_blank">看中国</a> | <a href="https://doqmgyop4u892.cloudfront.net/pHh5q?elvxvfx" target="_blank">新生网</a> | <a href="https://d265ujbtchne9r.cloudfront.net/tktpt?yzbbxm" target="_blank">阿波罗网</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/Mjpvu?cnwiuer" target="_blank">干净世界</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/10?rxnvumtzt" target="_blank">退党服务</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/Rffqf?xpefvxwl" target="_blank">明慧广播</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/nw9Vn?kbucpveaa" target="_blank">传奇时代</a> | <a href="https://d8jw662akk94j.cloudfront.net/AF9AG?ixtkilsft" target="_blank">新境界影视</a> | <a href="https://d337p4rc38c0de.cloudfront.net/zqMQA?eqcvgrgxq" target="_blank">文昭谈论</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/7?qzwktoa" target="_blank">明慧</a></p><p><a href="https://d17bhfsmf5ovpz.cloudfront.net/9?khzcfhpn" target="_blank">大法</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/3?iverrsvc" target="_blank">新唐人</a> | <a href="https://d3bo5docy69ast.cloudfront.net/obAhT?qjebacw" target="_blank">人民报</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/xXNHu?buhspl" target="_blank">放光明</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/5?hzrxqqc" target="_blank">新纪元</a> | <a href="https://dcz6rimunj42y.cloudfront.net/6?fksiaoby" target="_blank">希望之声</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/11?zrkwz" target="_blank">无界网络</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/Pueji?ltnbpvre" target="_blank">追查国际</a> | <a href="https://d1fejrztdgsube.cloudfront.net/16?wfvtveswz" target="_blank">明慧之窗</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/LdvzZ?aldbwiqw" target="_blank">细语人生</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/fBn3r?pznpnqogp" target="_blank">新世纪影视</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/PUWMb?gfdedffu" target="_blank">江峰时刻</a> | <a href="https://d3myewunzonann.cloudfront.net/8?gkhrlox" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290815.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290822-GettyImages-2161483587-320x200.jpg"><p align="center">拜登全国讲话 谴责暴力 吁美国人冷静团结</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nnlvhxz#1" target="_blank">首页</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/1?xzkyl" target="_blank">动态网</a> | <a href="https://d14a0yccee2yym.cloudfront.net/2?sklrkzfjy" target="_blank">大纪元</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/4?khfdw" target="_blank">看中国</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/pHh5q?pxqehawq" target="_blank">新生网</a> | <a href="https://d3bo5docy69ast.cloudfront.net/tktpt?wbiest" target="_blank">阿波罗网</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/Mjpvu?iilcot" target="_blank">干净世界</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/10?dtokjkioe" target="_blank">退党服务</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/Rffqf?yrfhm" target="_blank">明慧广播</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/nw9Vn?kchxkmjyb" target="_blank">传奇时代</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/AF9AG?foytqq" target="_blank">新境界影视</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/zqMQA?jgeyaqsbk" target="_blank">文昭谈论</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/7?bgabncd" target="_blank">明慧</a></p><p><a href="https://dld25pfif4r64.cloudfront.net/9?dejlgxidd" target="_blank">大法</a> | <a href="https://d1lulvfep8g527.cloudfront.net/3?wpggkufr" target="_blank">新唐人</a> | <a href="https://d78f5frq5siq8.cloudfront.net/obAhT?iqnxhs" target="_blank">人民报</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/xXNHu?hijniqlns" target="_blank">放光明</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/5?sekcbtf" target="_blank">新纪元</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/6?msqbw" target="_blank">希望之声</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/11?gxkid" target="_blank">无界网络</a> | <a href="https://dgk92ykceobaf.cloudfront.net/Pueji?xogjd" target="_blank">追查国际</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/16?rwmxdgy" target="_blank">明慧之窗</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/LdvzZ?gzqiirjw" target="_blank">细语人生</a> | <a href="https://dfxrfb9070id6.cloudfront.net/fBn3r?kodsxvtio" target="_blank">新世纪影视</a> | <a href="https://d21y52w6f35pla.cloudfront.net/PUWMb?gjarsgh" target="_blank">江峰时刻</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/8?terimeor" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-320x200.jpg"><p align="center">中共三中全会在内外危机中开锣 专家这样看</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1" title="中共三中全会在内外危机中开锣 专家这样看""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290815.md#1" title="拜登全国讲话 谴责暴力 吁美国人冷静团结""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290822-GettyImages-2161483587-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290726.md#1" title="川普和多名政要感恩上帝 使他幸免于难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290273-2407132111461528-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1" title="五款经久耐用且维护费低的SUV 全是日本车""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/01/id14152193-2023_Toyota_RAV4_Prime_01-320x200.jpg">&nbsp;</a>
@@ -11,18 +12,17 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290663.md#1" title="美联储降息 房价恐仍然不会下降""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290664-eae640b996c0ba1d3b3d940da0ce0a7c-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1" title="CECC幕僚长：阻中共活摘 确保美企不被利用""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1" title="Costco礼品卡很超值 但四缺陷易被忽略""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13422008-shutterstock_1320536255-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1" title="【更新】枪手身份曝光 FBI定调暗杀未遂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290154-GettyImages-2161923146-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290917.md#1">中文社区热议川普遇袭 南加律师：事件太诡异</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1">中共三中全会在内外危机中开锣 专家这样看</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290709.md#1">【秦鹏观察】川普遇袭早有预言 两照片进历史</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290857.md#1">川普遇刺事件后纽约市加强安保</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290917.md#1">中文社区热议川普遇袭 南加律师：事件太诡异</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1">中共三中全会在内外危机中开锣 专家这样看</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290709.md#1">【秦鹏观察】川普遇袭早有预言 两照片进历史</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290815.md#1">拜登全国讲话 谴责暴力 吁美国人冷静团结</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290726.md#1">川普和多名政要感恩上帝 使他幸免于难</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290745.md#1">宾州高中老师：枪手较沉默 通常独自一人</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290697.md#1">进入野火高峰季 加州被高温与大火包围</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1">五款经久耐用且维护费低的SUV 全是日本车</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290776.md#1">欧美文化差异有多大？连喝水习惯都大不同</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290697.md#1">进入野火高峰季 加州被高温与大火包围</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1">五款经久耐用且维护费低的SUV 全是日本车</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
@@ -53,10 +53,10 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290242.md#1">【翻墙必看】目击者谈川普被“即时袭击”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290320.md#1">重庆大暴雨持续 6条河流现超警戒水位洪水</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290234.md#1">川普遇袭右耳受伤 马斯克：全力支持他</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290279.md#1">女童去世 鲁殡仪馆8个花篮收1.38万惹议</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290662.md#1">张菁：官媒频“摆拍” 中共新闻造假酿祸端</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290569.md#1">王友群：为何说迫害法轮功是害人害己害子孙？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290673.md#1">前消防队长在川普集会上遇难 州长：降半旗悼念</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290243.md#1">共和党候选人：我从前排目睹对川普的袭击</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290709.md#1">【秦鹏观察】川普遇袭早有预言 两照片进历史</a><br>
@@ -113,7 +113,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,195,443 人
+!共 433,196,148 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289814-158f93a220c221bf58a4fc43c59d05a6-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/482560-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289709.md#1">金华首富女婿叹大陆前沿企业也内卷</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290852.md#1">三退声明精选（2024/07/14）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
