--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nnlvhxz#1" target="_blank">首页</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/1?xzkyl" target="_blank">动态网</a> | <a href="https://d14a0yccee2yym.cloudfront.net/2?sklrkzfjy" target="_blank">大纪元</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/4?khfdw" target="_blank">看中国</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/pHh5q?pxqehawq" target="_blank">新生网</a> | <a href="https://d3bo5docy69ast.cloudfront.net/tktpt?wbiest" target="_blank">阿波罗网</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/Mjpvu?iilcot" target="_blank">干净世界</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/10?dtokjkioe" target="_blank">退党服务</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/Rffqf?yrfhm" target="_blank">明慧广播</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/nw9Vn?kchxkmjyb" target="_blank">传奇时代</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/AF9AG?foytqq" target="_blank">新境界影视</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/zqMQA?jgeyaqsbk" target="_blank">文昭谈论</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/7?bgabncd" target="_blank">明慧</a></p><p><a href="https://dld25pfif4r64.cloudfront.net/9?dejlgxidd" target="_blank">大法</a> | <a href="https://d1lulvfep8g527.cloudfront.net/3?wpggkufr" target="_blank">新唐人</a> | <a href="https://d78f5frq5siq8.cloudfront.net/obAhT?iqnxhs" target="_blank">人民报</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/xXNHu?hijniqlns" target="_blank">放光明</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/5?sekcbtf" target="_blank">新纪元</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/6?msqbw" target="_blank">希望之声</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/11?gxkid" target="_blank">无界网络</a> | <a href="https://dgk92ykceobaf.cloudfront.net/Pueji?xogjd" target="_blank">追查国际</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/16?rwmxdgy" target="_blank">明慧之窗</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/LdvzZ?gzqiirjw" target="_blank">细语人生</a> | <a href="https://dfxrfb9070id6.cloudfront.net/fBn3r?kodsxvtio" target="_blank">新世纪影视</a> | <a href="https://d21y52w6f35pla.cloudfront.net/PUWMb?gjarsgh" target="_blank">江峰时刻</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/8?terimeor" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ghknl#1" target="_blank">首页</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/1?mpaqy" target="_blank">动态网</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/2?anvde" target="_blank">大纪元</a> | <a href="https://dld25pfif4r64.cloudfront.net/4?qkhappo" target="_blank">看中国</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/pHh5q?dmjigjnm" target="_blank">新生网</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/tktpt?survlhq" target="_blank">阿波罗网</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/Mjpvu?kgxtl" target="_blank">干净世界</a> | <a href="https://d2oemtubh889hy.cloudfront.net/10?tslpwibbe" target="_blank">退党服务</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Rffqf?ixtqgftq" target="_blank">明慧广播</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/nw9Vn?ojfmtged" target="_blank">传奇时代</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/AF9AG?vrjklhsa" target="_blank">新境界影视</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/zqMQA?faoncjrlq" target="_blank">文昭谈论</a> | <a href="https://d337p4rc38c0de.cloudfront.net/7?chhdutoc" target="_blank">明慧</a></p><p><a href="https://d11leod1im7q2u.cloudfront.net/9?atogkb" target="_blank">大法</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/3?choplnn" target="_blank">新唐人</a> | <a href="https://d14a0yccee2yym.cloudfront.net/obAhT?dhkaxp" target="_blank">人民报</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/xXNHu?pktarpfad" target="_blank">放光明</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/5?ffyegyq" target="_blank">新纪元</a> | <a href="https://d239x61949z6p.cloudfront.net/6?hddyroe" target="_blank">希望之声</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/11?ytattgsv" target="_blank">无界网络</a> | <a href="https://d15m60lsma25jk.cloudfront.net/Pueji?ukmgstkxu" target="_blank">追查国际</a> | <a href="https://d265ujbtchne9r.cloudfront.net/16?tozacpuz" target="_blank">明慧之窗</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/LdvzZ?ywflrzcx" target="_blank">细语人生</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/fBn3r?prmtv" target="_blank">新世纪影视</a> | <a href="https://d3b82atanl11dg.cloudfront.net/PUWMb?bhxmn" target="_blank">江峰时刻</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/8?nptyiagru" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-320x200.jpg"><p align="center">中共三中全会在内外危机中开锣 专家这样看</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1" title="中共三中全会在内外危机中开锣 专家这样看""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290815.md#1" title="拜登全国讲话 谴责暴力 吁美国人冷静团结""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290822-GettyImages-2161483587-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289716.md#1" title="CECC幕僚长：阻中共活摘 确保美企不被利用""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14288959-LDB2433-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287991.md#1" title="Costco礼品卡很超值 但四缺陷易被忽略""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13422008-shutterstock_1320536255-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290857.md#1">川普遇刺事件后纽约市加强安保</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290917.md#1">中文社区热议川普遇袭 南加律师：事件太诡异</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1">中共三中全会在内外危机中开锣 专家这样看</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290709.md#1">【秦鹏观察】川普遇袭早有预言 两照片进历史</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290875.md#1">300纽约小房东时代广场集会“要公平” 多数为华人</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290834.md#1">川普遭遇暗杀未遂事件 详细时间线剖析</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290902.md#1">大纽约侨界欢送经文处副处长张俊裕</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290857.md#1">川普遇刺事件后纽约市加强安保</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290917.md#1">中文社区热议川普遇袭 南加律师：事件太诡异</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290831.md#1">中共三中全会在内外危机中开锣 专家这样看</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290709.md#1">【秦鹏观察】川普遇袭早有预言 两照片进历史</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290788.md#1">中国四大航空上半年预亏达81亿 全年盈利仍难</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290815.md#1">拜登全国讲话 谴责暴力 吁美国人冷静团结</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290726.md#1">川普和多名政要感恩上帝 使他幸免于难</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290745.md#1">宾州高中老师：枪手较沉默 通常独自一人</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290697.md#1">进入野火高峰季 加州被高温与大火包围</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1">五款经久耐用且维护费低的SUV 全是日本车</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
